# Markov-hs

./: .gitignore  TextMarkovChain.cabal  stack.yaml
app/: Console.hs  Main.hs  Utilities.hs
src/: Lib.hs
