name:                TextMarkovChain
version:             0.1.0.0
synopsis:            Markov chains of text
description:         Please see README.md
homepage:            https://github.com/caneroj1/TextMarkovChain#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Canero
maintainer:          jmc41493@gmail.com
copyright:           Copyright: (c) 2016 Joe Canero
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , random
                     , text
                     , containers
  default-language:    Haskell2010

executable TextMarkovChain-exe
  hs-source-dirs:      app
  other-modules:       Utilities
                     , Console
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , TextMarkovChain
                     , conduit
                     , conduit-extra
                     , conduit-combinators
                     , resourcet
                     , random
                     , haskeline
                     , mtl
  default-language:    Haskell2010

test-suite TextMarkovChain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TextMarkovChain
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caneroj1/TextMarkovChain
